--- a/Badgers-Admin/.gitignore
+++ b/Badgers-Admin/.gitignore
@@ -25,3 +25,9 @@ dist-ssr
 # Ignorar variables de entorno
 backend/badgers_project/.env
 backend/.env
+
+# Archivos de base de datos locales
+badgers.db
+*.db
+*.sqlite
+*.sqlite3
