--- a/Badgers-Admin/Badgers-Admin/.env
+++ b/Badgers-Admin/Badgers-Admin/.env
@@ -22,10 +22,10 @@ VITE_API_URL=http://localhost:8000
 # Si usas S3 para almacenamiento de archivos
 
 # Región de AWS S3
-VITE_AWS_S3_REGION=us-east-2
+#VITE_AWS_S3_REGION=us-east-2
 
 # Nombre del bucket S3
-VITE_AWS_S3_BUCKET=badgersproducts
+#VITE_AWS_S3_BUCKET=badgersproducts
 
 # ========================================
 # CONFIGURACIÓN ADICIONAL
