--- a/Badgers-Admin/backend/render.yaml
+++ b/Badgers-Admin/backend/render.yaml
@@ -19,9 +19,9 @@ services:
       - key: AWS_SECRET_ACCESS_KEY
         sync: false
       - key: AWS_STORAGE_BUCKET_NAME
-        value: badgersproducts
+        value: badgerss3
       - key: AWS_S3_REGION_NAME
-        value: us-east-2
+        value: sa-east-1
 
 databases:
   - name: badgers-db
